--- a/styles/common.css
+++ b/styles/common.css
@@ -4,7 +4,7 @@ body {
 
 .header {
     background-color: #26C6DA;
-    margin-bottom: 100px;
+    margin-bottom: 20px;
 }
 
 .search {
@@ -33,7 +33,7 @@ body {
 
 .header-text {
     font-size: x-large;
-    font-family: "Droid Sans Georgian";
+    font-family: "Droid Sans Georgian", monospace;
     font-weight: bolder;
     color: #FFF;
     transform: translateX(-50%);
@@ -41,8 +41,28 @@ body {
     position: absolute;
 }
 
+.online-header {
+    font-size: medium;
+    color: #00B16A;
+}
+
+.offline-header {
+    font-size: medium;
+    color: #D24D57;
+}
+
+.closed-header {
+    color: #95A5A6; 
+    font-size: medium;
+}
+
 #user-list {
     list-style-type:none;
+}
+
+.filter-list {
+    font-size: smaller;
+    margin-bottom: 15px;
 }
 
 ul {
@@ -52,8 +72,13 @@ ul {
 li {
     margin: 20px 20px 20px 0;
     color: #3E4651;
-    height: 50px;
+    height: 75px;
+    font-size: xx-small;
+    padding-top: 10px;
+    padding-left: 20px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    border-radius: 5px;
+    border-color: #D4D4D4;
 }
 
 li:hover{
@@ -64,4 +89,6 @@ li:hover{
     width:50px; 
     height:50px;
     margin-right: 50px;
+    border-radius: 5px;
+    border-color: #D4D4D4;
 }
